--- a/WCSTrainer/Pages/Employees/Edit.cshtml
+++ b/WCSTrainer/Pages/Employees/Edit.cshtml
@@ -11,8 +11,10 @@
 
         <div class="properties">
             <form method="post">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div asp-validation-summary="All" class="text-danger"></div>
                 <input type="hidden" asp-for="Employee.Id" />
+                <input asp-for="Employee.UserAccountId" class="form-control" hidden />
+
                 <div class="form-group">
                     <label asp-for="Employee.FirstName" class="control-label"></label>
                     <input asp-for="Employee.FirstName" class="form-control"/>
@@ -27,16 +29,6 @@
                     <label asp-for="Employee.Status" class="control-label"></label>
                     <input asp-for="Employee.Status" class="form-control"/>
                     <span asp-validation-for="Employee.Status" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Employee.TrainingOrdersAsTrainee" class="control-label"></label>
-                    <input asp-for="Employee.TrainingOrdersAsTrainee" class="form-control" />
-                    <span asp-validation-for="Employee.TrainingOrdersAsTrainee" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Employee.TrainingOrdersAsTrainer" class="control-label"></label>
-                    <input asp-for="Employee.TrainingOrdersAsTrainer" class="form-control" />
-                    <span asp-validation-for="Employee.TrainingOrdersAsTrainer" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Employee.Skills" class="control-label"></label>
