--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -45,14 +45,14 @@
                         <div class="form-group">
                             <div class="form">
                                 <div class="labels">
-                                    <p class="control-label">Begin Date*</p>
+                                    <p class="control-label">Begin Date</p>
                                     <span asp-validation-for="TrainingOrder.BeginDate" class="text-danger"></span>
                                 </div>
                                 <input type="date" asp-for="TrainingOrder.BeginDate" class="form-control" />
                             </div>
                             <div class="form">
                                 <div class="labels">
-                                    <p class="control-label">End Date*</p>
+                                    <p class="control-label">End Date</p>
                                     <span asp-validation-for="TrainingOrder.EndDate" class="text-danger"></span>
                                 </div>
                                 <input type="date" asp-for="TrainingOrder.EndDate" class="form-control" />
@@ -61,7 +61,7 @@
                         <div class="form-group">
                             <div class="form">
                                 <div class="labels">
-                                    <p class="control-label">Priority Level*</p>
+                                    <p class="control-label">Priority Level</p>
                                     <span asp-validation-for="TrainingOrder.Priority" class="text-danger"></span>
                                 </div>
                                 <select 
