--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -44,7 +44,7 @@
                         <div class="form-group">
                             <div class="form">
                                 <div class="labels">
-                                    <p class="control-label">Description*</p>
+                                    <p class="control-label">Description</p>
                                     <span asp-validation-for="TrainingOrder.Description" class="text-danger"></span>
                                 </div>
                                 <textarea rows="4" asp-for="TrainingOrder.Description" placeholder="Describe the skill being trained and the goal."></textarea>
@@ -53,14 +53,14 @@
                         <div class="form-group">
                             <div class="form">
                                 <div class="labels">
-                                    <p class="control-label">Location*</p>
+                                    <p class="control-label">Location</p>
                                     <span asp-validation-for="TrainingOrder.LocationId" class="text-danger"></span>
                                 </div>
                                 <select asp-for="TrainingOrder.LocationId" class="form-control" asp-items="@Model.Locations"></select>
                             </div>
                             <div class="form">
                                 <div class="labels">
-                                    <p class="control-label">Learning Medium*</p>
+                                    <p class="control-label">Learning Medium</p>
                                     <span asp-validation-for="TrainingOrder.Medium" class="text-danger"></span>
                                 </div>
                                 <input asp-for="TrainingOrder.Medium" class="form-control" />
@@ -76,7 +76,7 @@
                             </div>
                             <div class="form">
                                 <div class="labels">
-                                    <p class="control-label">Priority Level*</p>
+                                    <p class="control-label">Priority Level</p>
                                     <span asp-validation-for="TrainingOrder.Priority" class="text-danger"></span>
                                 </div>
                                 <select asp-for="TrainingOrder.Priority" class="form-drop2">
