--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -40,7 +40,7 @@
                                 </div>
                             </div>
                         }
-                        <input id="trainersInput" asp-for="@Model.SelectedTrainerString" />
+                        <input id="trainersInput" asp-for="@Model.SelectedTrainerString" hidden />
                         <div class="form-group">
                             <div class="form">
                                 <div class="labels">
