Adding details component

--- a/WCSTrainer/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/WCSTrainer/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,7 +9,7 @@
     }
 }
 
-@using WCSTrainer.Components
+@using WCSTrainer.Pages.Shared.RazorComponents
 
 <div class="panel">
     <div class="body">
