--- a/WCSTrainer/Pages/_ViewImports.cshtml
+++ b/WCSTrainer/Pages/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using WCSTrainer
 @namespace WCSTrainer.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using WCSTrainer.Pages.Shared.RazorComponents
+@using WCSTrainer.Data;
