--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -103,6 +103,7 @@
                     </div>
                     <div class="btns">
                         <a asp-page="Create" class="btn btnWhite">Create Training Order</a>
+                        <a asp-page="Assign" class="btn btnWhite">Assign Training Orders</a>
                         <a asp-page="AllView" class="btn btnWhite">Planning</a>
                         <a asp-page="Scheduling" class="btn btnWhite">Scheduling</a>
                     </div>
