--- a/WCSTrainer/Pages/Shared/RazorComponents/TrainingDetails.razor
+++ b/WCSTrainer/Pages/Shared/RazorComponents/TrainingDetails.razor
@@ -1,94 +1,123 @@
-﻿<div class="text-group">
-    <p class="title">Status</p>
-    @{
-        var type = "awaiting";
-        if (TrainingOrder.Status.Equals("Active")) {
-            type = "active";
-        } else if (TrainingOrder.Status.Equals("Verified")) {
-            type = "verified";
-        } else if (TrainingOrder.Status.Equals("Completed")) {
-            type = "completed";
+﻿@using Microsoft.EntityFrameworkCore
+@inject WCSTrainer.Data.WCSTrainerContext _context
+
+@if (TrainingOrder != null) {
+    <div class="text-group">
+        <p class="title">Status</p>
+        @{
+            var type = "awaiting";
+            if (TrainingOrder.Status.Equals("Active")) {
+                type = "active";
+            } else if (TrainingOrder.Status.Equals("Verified")) {
+                type = "verified";
+            } else if (TrainingOrder.Status.Equals("Completed")) {
+                type = "completed";
+            }
+            <p class="info @type">@TrainingOrder.Status</p>
         }
-        <p class="info @type">@TrainingOrder.Status</p>
+    </div>
+    @if (!TrainingOrder.Status.Equals("Awaiting Approval")) {
+        <div class="text-group">
+            <p class="title">Trainers</p>
+            <p class="info">@TrainerList</p>
+        </div>
     }
-</div>
-@if (!TrainingOrder.Status.Equals("Awaiting Approval")) {
     <div class="text-group">
-        <p class="title">Trainers</p>
-        <p class="info">@TrainerList</p>
-    </div>
-}
-<div class="text-group">
-    <p class="title">Trainee</p>
-    <p class="info">@TrainingOrder.Trainee.FirstName @TrainingOrder.Trainee.LastName</p>
-</div>
-<div class="text-group">
-    <p class="title">Priority Level</p>
-    <p class="info">@TrainingOrder.Priority</p>
-</div>
-<div class="text-group">
-    <p class="title">Description</p>
-    <pre class="info">@TrainingOrder.Description</pre>
-</div>
-@if (!TrainingOrder.Status.Equals("Awaiting Approval")) {
-    <div class="text-group">
-        <p class="title">Begin Date</p>
-        <p class="info">@TrainingOrder.BeginDate</p>
+        <p class="title">Trainee</p>
+        <p class="info">@TrainingOrder.Trainee.FirstName @TrainingOrder.Trainee.LastName</p>
     </div>
     <div class="text-group">
-        <p class="title">End Date</p>
-        <p class="info">@TrainingOrder.EndDate</p>
-    </div>
-}
-<div class="text-group">
-    <p class="title">Location</p>
-    <p class="info">@TrainingOrder.Location.Name</p>
-</div>
-<div class="text-group">
-    <p class="title">Learning Medium</p>
-    <p class="info">@TrainingOrder.Medium</p>
-</div>
-<div class="text-group">
-    <p class="title">Training Hours Needed</p>
-    <p class="info">@TrainingOrder.Duration Hours</p>
-</div>
-<div class="text-group">
-    <p class="title">Order Creation Date</p>
-    <p class="info">@TrainingOrder.CreateDate</p>
-</div>
-@if (!TrainingOrder.Status.Equals("Awaiting Approval") && !TrainingOrder.Status.Equals("Active")) {
-    <div class="text-group">
-        <p class="title">Closing Notes</p>
-        <pre class="info">@TrainingOrder.ClosingNotes</pre>
-    </div>
-}
-@if (TrainingOrder.Status.Equals("Verified")) {
-    <br>
-    <p style="font-size: 20px;">Verification</p>
-    <div class="text-group">
-        <p class="title">Signed By</p>
-        <p class="info">Aadam Husain</p>
+        <p class="title">Priority Level</p>
+        <p class="info">@TrainingOrder.Priority</p>
     </div>
     <div class="text-group">
-        <p class="title">Date Signed</p>
-        <p class="info">5/14/2024</p>
+        <p class="title">Description</p>
+        <pre class="info">@TrainingOrder.Description</pre>
+    </div>
+    @if (!TrainingOrder.Status.Equals("Awaiting Approval")) {
+        <div class="text-group">
+            <p class="title">Begin Date</p>
+            <p class="info">@TrainingOrder.BeginDate</p>
+        </div>
+        <div class="text-group">
+            <p class="title">End Date</p>
+            <p class="info">@TrainingOrder.EndDate</p>
+        </div>
+    }
+    <div class="text-group">
+        <p class="title">Location</p>
+        <p class="info">@TrainingOrder.Location.Name</p>
     </div>
     <div class="text-group">
-        <p class="title">Notes</p>
-        <p class="info">No Data</p>
+        <p class="title">Learning Medium</p>
+        <p class="info">@TrainingOrder.Medium</p>
     </div>
     <div class="text-group">
-        <p class="title">Effectiveness</p>
-        <p class="info">No Data</p>
+        <p class="title">Training Hours Needed</p>
+        <p class="info">@TrainingOrder.Duration Hours</p>
     </div>
+    <div class="text-group">
+        <p class="title">Order Creation Date</p>
+        <p class="info">@TrainingOrder.CreateDate</p>
+    </div>
+    @if (!TrainingOrder.Status.Equals("Awaiting Approval") && !TrainingOrder.Status.Equals("Active")) {
+        <div class="text-group">
+            <p class="title">Closing Notes</p>
+            <pre class="info">@TrainingOrder.ClosingNotes</pre>
+        </div>
+    }
+    @if (TrainingOrder.Status.Equals("Verified")) {
+        <br>
+        <p style="font-size: 20px;">Verification</p>
+        <div class="text-group">
+            <p class="title">Signed By</p>
+            <p class="info">Aadam Husain</p>
+        </div>
+        <div class="text-group">
+            <p class="title">Date Signed</p>
+            <p class="info">5/14/2024</p>
+        </div>
+        <div class="text-group">
+            <p class="title">Notes</p>
+            <p class="info">No Data</p>
+        </div>
+        <div class="text-group">
+            <p class="title">Effectiveness</p>
+            <p class="info">No Data</p>
+        </div>
+    }
+} else {
+    <p>Loading...</p>
 }
 
 @code {
     [Parameter]
-    public TrainingOrder TrainingOrder { get; set; } = default!;
-    [Parameter]
-    public string TrainerList { get; set; } = string.Empty;
-}
+    public int OrderId { get; set; }
 
-<style>
-</style>
+    private TrainingOrder? TrainingOrder;
+    private string TrainerList;
+
+    protected override async Task OnInitializedAsync() {
+        await LoadTrainingOrderAsync();
+    }
+
+    protected override async Task OnParametersSetAsync() {
+        await LoadTrainingOrderAsync();
+    }
+
+    private async Task LoadTrainingOrderAsync() {
+        TrainingOrder = await _context.TrainingOrders
+            .Include(t => t.Trainee)
+            .Include(l => l.Location)
+            .Include(tr => tr.Trainers)
+            .FirstOrDefaultAsync(m => m.Id == OrderId);
+
+        List<string> trainerNames = new List<string>();
+
+        foreach (var trainer in TrainingOrder.Trainers) {
+            trainerNames.Add(trainer.FirstName + " " + trainer.LastName);
+        }
+
+        TrainerList = string.Join(", ", trainerNames);
+    }
+}
